--- a/src/config/maps/themes/basic/keys/_keys.scss
+++ b/src/config/maps/themes/basic/keys/_keys.scss
@@ -5,34 +5,34 @@
 // - Map is collected into the $theme-basic-settings map and is interpolated into custom properties.
 
 $theme-basic-keys: (
-        primary-color: $primary-color,
-        primary-hover-color: $primary-hover-color,
-        primary-selected-color: $primary-selected-color,
-        primary-text-color: $primary-text-color,
-        text-color-on-primary: $text-color-on-primary,
-        text-color-on-inverted: $text-color-on-inverted,
-        secondary-text-color: $secondary-text-color,
-        placeholder-color: $placeholder-color,
-        icon-color: $icon-color,
-        link-color: $link-color,
-        primary-background-color: $primary-background-color,
-        primary-background-hover-color: $primary-background-hover-color,
-        secondary-background-color:$secondary-background-color,
-        grey-background-color:$grey-background-color,
-        allgrey-background-color: $allgrey-background-color,
-        inverted-color-background: $inverted-color-background,
-        disabled-background-color: $disabled-background-color,
-        disabled-text-color: $disabled-text-color,
-        positive-color: $positive-color,
-        positive-color-hover: $positive-color-hover,
-        positive-color-selected: $positive-color-selected,
-        negative-color: $negative-color,
-        negative-color-hover: $negative-color-hover,
-        negative-color-selected: $negative-color-selected,
-        private-color: $private-color,
-        shareable-color: $shareable-color,
-        ui-border-color: $ui-border-color,
-        layout-border-color: $layout-border-color,
+        primary-color: $light-theme-primary-color,
+        primary-hover-color: $light-theme-primary-hover-color,
+        primary-selected-color: $light-theme-primary-selected-color,
+        primary-text-color: $light-theme-primary-text-color,
+        text-color-on-primary: $light-theme-text-color-on-primary,
+        text-color-on-inverted: $light-theme-text-color-on-inverted,
+        secondary-text-color: $light-theme-secondary-text-color,
+        placeholder-color: $light-theme-placeholder-color,
+        icon-color: $light-theme-icon-color,
+        link-color: $light-theme-link-color,
+        primary-background-color: $light-theme-primary-background-color,
+        primary-background-hover-color: $light-theme-primary-background-hover-color,
+        secondary-background-color:$light-theme-secondary-background-color,
+        grey-background-color:$light-theme-grey-background-color,
+        allgrey-background-color: $light-theme-allgrey-background-color,
+        inverted-color-background: $light-theme-inverted-color-background,
+        disabled-background-color: $light-theme-disabled-background-color,
+        disabled-text-color: $light-theme-disabled-text-color,
+        positive-color: $light-theme-positive-color,
+        positive-color-hover: $light-theme-positive-color-hover,
+        positive-color-selected: $light-theme-positive-color-selected,
+        negative-color: $light-theme-negative-color,
+        negative-color-hover: $light-theme-negative-color-hover,
+        negative-color-selected: $light-theme-negative-color-selected,
+        private-color: $light-theme-private-color,
+        shareable-color: $light-theme-shareable-color,
+        ui-border-color: $light-theme-ui-border-color,
+        layout-border-color: $light-theme-layout-border-color,
 );
 
 // ## BASIC THEME SHADOW MAP: basic theme's shadow color map.
@@ -40,8 +40,8 @@ $theme-basic-keys: (
 // - Map is collected into the $theme-basic-settings map and is interpolated into custom properties.
 
 $theme-basic-shadow-keys: (
-        box-shadow-xs: $box-shadow-xs,
-        box-shadow-small: $box-shadow-small,
-        box-shadow-medium: $box-shadow-medium,
-        box-shadow-large: $box-shadow-large,
+        box-shadow-xs: $light-theme-box-shadow-xs,
+        box-shadow-small: $light-theme-box-shadow-small,
+        box-shadow-medium: $light-theme-box-shadow-medium,
+        box-shadow-large: $light-theme-box-shadow-large,
 );
