--- a/src/config/maps/themes/black/keys/_black-theme-keys.scss
+++ b/src/config/maps/themes/black/keys/_black-theme-keys.scss
@@ -3,35 +3,34 @@
 // - Map is collected into the $theme-black-settings map and is interpolated into custom properties.
 
 $theme-black-keys: (
-        primary-color: $theme-black-primary-color,
-        primary-on-secondary-color: $theme-black-primary-on-secondary-color,
-        primary-hover-color: $theme-black-primary-hover-color,
-        primary-selected-color: $theme-black-primary-selected-color,
-        primary-text-color: $theme-black-primary-text-color,
-        text-color-on-primary: $theme-black-text-color-on-primary,
-        text-color-on-inverted: $theme-black-text-color-on-inverted,
-        secondary-text-color: $theme-black-secondary-text-color,
-        placeholder-color: $theme-black-placeholder-color,
-        icon-color: $theme-black-icon-color,
-        link-color: $theme-black-link-color,
-        primary-background-color: $theme-black-primary-background-color,
-        primary-background-hover-color: $theme-black-primary-background-hover-color,
-        secondary-background-color: $theme-black-secondary-background-color,
-        grey-background-color: $theme-black-grey-background-color,
-        allgrey-background-color: $theme-black-allgrey-background-color,
-        inverted-color-background: $theme-black-inverted-color-background,
-        disabled-text-color: $theme-black-disabled-text-color,
-        disabled-background-color: $theme-black-disabled-background-color,
-        positive-color: $theme-black-positive-color,
-        positive-color-hover: $theme-black-positive-color-hover,
-        positive-color-selected: $theme-black-positive-color-selected,
-        negative-color: $theme-black-negative-color,
-        negative-color-hover: $theme-black-negative-color-hover,
-        negative-color-selected: $theme-black-negative-color-selected,
-        private-color: $theme-black-private-color,
-        shareable-color: $theme-black-shareable-color,
-        ui-border-color: $theme-black-ui-border-color,
-        layout-border-color: $theme-black-layout-border-color,
+        primary-color: $black-theme-primary-color,
+        primary-hover-color: $black-theme-primary-hover-color,
+        primary-selected-color: $black-theme-primary-selected-color,
+        primary-text-color: $black-theme-primary-text-color,
+        text-color-on-primary: $black-theme-text-color-on-primary,
+        text-color-on-inverted: $black-theme-text-color-on-inverted,
+        secondary-text-color: $black-theme-secondary-text-color,
+        placeholder-color: $black-theme-placeholder-color,
+        icon-color: $black-theme-icon-color,
+        link-color: $black-theme-link-color,
+        primary-background-color: $black-theme-primary-background-color,
+        primary-background-hover-color: $black-theme-primary-background-hover-color,
+        secondary-background-color: $black-theme-secondary-background-color,
+        grey-background-color: $black-theme-grey-background-color,
+        allgrey-background-color: $black-theme-allgrey-background-color,
+        inverted-color-background: $black-theme-inverted-color-background,
+        disabled-text-color: $black-theme-disabled-text-color,
+        disabled-background-color: $black-theme-disabled-background-color,
+        positive-color: $black-theme-positive-color,
+        positive-color-hover: $black-theme-positive-color-hover,
+        positive-color-selected: $black-theme-positive-color-selected,
+        negative-color: $black-theme-negative-color,
+        negative-color-hover: $black-theme-negative-color-hover,
+        negative-color-selected: $black-theme-negative-color-selected,
+        private-color: $black-theme-private-color,
+        shareable-color: $black-theme-shareable-color,
+        ui-border-color: $black-theme-ui-border-color,
+        layout-border-color: $black-theme-layout-border-color,
 );
 
 // DARK THEME SHADOW MAP: dark theme's shadow color map.
@@ -39,8 +38,8 @@ $theme-black-keys: (
 // - Map is collected into the $theme-black-settings map and is interpolated into custom properties.
 
 $theme-black-shadow-keys: (
-        box-shadow-xs: $theme-black-box-shadow-xs,
-        box-shadow-small: $theme-black-box-shadow-small,
-        box-shadow-medium: $theme-black-box-shadow-medium,
-        box-shadow-large: $theme-black-box-shadow-large,
+        box-shadow-xs: $black-theme-box-shadow-xs,
+        box-shadow-small: $black-theme-box-shadow-small,
+        box-shadow-medium: $black-theme-box-shadow-medium,
+        box-shadow-large: $black-theme-box-shadow-large,
 );
