--- a/src/config/maps/themes/hacker/keys/_hacker-theme-keys.scss
+++ b/src/config/maps/themes/hacker/keys/_hacker-theme-keys.scss
@@ -5,33 +5,33 @@
 // - Map is collected into the $theme-hacker-settings map and is interpolated into custom properties.
 
 $theme-hacker-keys: (
-        primary-color: $theme-hacker-primary-color,
-        primary-hover-color: $theme-hacker-primary-hover-color,
-        primary-selected-color: $theme-hacker-primary-selected-color,
-        primary-text-color: $theme-hacker-primary-text-color,
-        text-color-on-inverted: $theme-hacker-text-color-on-inverted,
-        secondary-text-color: $theme-hacker-secondary-text-color,
-        placeholder-color: $theme-hacker-placeholder-color,
-        icon-color: $theme-hacker-icon-color,
-        link-color: $theme-hacker-link-color,
-        primary-background-color: $theme-hacker-primary-background-color,
-        primary-background-hover-color: $theme-hacker-primary-background-hover-color,
-        secondary-background-color: $theme-hacker-secondary-background-color,
-        grey-background-color: $theme-hacker-grey-background-color,
-        allgrey-background-color: $theme-hacker-allgrey-background-color,
-        inverted-color-background: $theme-hacker-inverted-color-background,
-        disabled-text-color: $theme-hacker-disabled-text-color,
-        disabled-background-color: $theme-hacker-disabled-background-color,
-        positive-color: $theme-hacker-positive-color,
-        positive-color-hover: $theme-hacker-positive-color-hover,
-        positive-color-selected: $theme-hacker-positive-color-selected,
-        negative-color: $theme-hacker-negative-color,
-        negative-color-hover: $theme-hacker-negative-color-hover,
-        negative-color-selected: $theme-hacker-negative-color-selected,
-        private-color: $theme-hacker-private-color,
-        shareable-color: $theme-hacker-shareable-color,
-        ui-border-color: $theme-hacker-ui-border-color,
-        layout-border-color: $theme-hacker-layout-border-color,
+        primary-color: $hacker-theme-primary-color,
+        primary-hover-color: $hacker-theme-primary-hover-color,
+        primary-selected-color: $hacker-theme-primary-selected-color,
+        primary-text-color: $hacker-theme-primary-text-color,
+        text-color-on-inverted: $hacker-theme-text-color-on-inverted,
+        secondary-text-color: $hacker-theme-secondary-text-color,
+        placeholder-color: $hacker-theme-placeholder-color,
+        icon-color: $hacker-theme-icon-color,
+        link-color: $hacker-theme-link-color,
+        primary-background-color: $hacker-theme-primary-background-color,
+        primary-background-hover-color: $hacker-theme-primary-background-hover-color,
+        secondary-background-color: $hacker-theme-secondary-background-color,
+        grey-background-color: $hacker-theme-grey-background-color,
+        allgrey-background-color: $hacker-theme-allgrey-background-color,
+        inverted-color-background: $hacker-theme-inverted-color-background,
+        disabled-text-color: $hacker-theme-disabled-text-color,
+        disabled-background-color: $hacker-theme-disabled-background-color,
+        positive-color: $hacker-theme-positive-color,
+        positive-color-hover: $hacker-theme-positive-color-hover,
+        positive-color-selected: $hacker-theme-positive-color-selected,
+        negative-color: $hacker-theme-negative-color,
+        negative-color-hover: $hacker-theme-negative-color-hover,
+        negative-color-selected: $hacker-theme-negative-color-selected,
+        private-color: $hacker-theme-private-color,
+        shareable-color: $hacker-theme-shareable-color,
+        ui-border-color: $hacker-theme-ui-border-color,
+        layout-border-color: $hacker-theme-layout-border-color,
 );
 
 
@@ -40,8 +40,8 @@ $theme-hacker-keys: (
 // - Map is collected into the $theme-hacker-settings map and is interpolated into custom properties.
 
 $theme-hacker-shadow-keys: (
-        box-shadow-xs: $theme-hacker-box-shadow-xs,
-        box-shadow-small: $theme-hacker-box-shadow-small,
-        box-shadow-medium: $theme-hacker-box-shadow-medium,
-        box-shadow-large: $theme-hacker-box-shadow-large,
+        box-shadow-xs: $hacker-theme-box-shadow-xs,
+        box-shadow-small: $hacker-theme-box-shadow-small,
+        box-shadow-medium: $hacker-theme-box-shadow-medium,
+        box-shadow-large: $hacker-theme-box-shadow-large,
 );
