Use "monday-ui-tokens": Content Scope. * Delete local tokens and add missing legacy. * Delete content mixins, use content tokens.

--- a/src/Themes/basic/_basic-theme-settings.scss
+++ b/src/Themes/basic/_basic-theme-settings.scss
@@ -5,4 +5,5 @@ $theme-basic-settings: map-collect(
                 $theme-basic-palette,
                 $theme-basic-keys,
                 $theme-basic-shadow-keys,
+                $theme-basic-content-keys
 );
