--- a/src/Themes/black/_black-theme-legacy-settings.scss
+++ b/src/Themes/black/_black-theme-legacy-settings.scss
@@ -3,4 +3,5 @@
 
 $theme-black-legacy-settings: map-collect(
                 $theme-black-legacy-keys,
+                $theme-black-legacy-content-keys
 );
