--- a/src/Themes/black/_black-theme-settings.scss
+++ b/src/Themes/black/_black-theme-settings.scss
@@ -4,4 +4,5 @@
 $theme-black-settings: map-collect(
                 $theme-black-keys,
                 $theme-black-shadow-keys,
+                $theme-black-content-keys
 );
