--- a/src/Themes/dark/_dark-theme-legacy-settings.scss
+++ b/src/Themes/dark/_dark-theme-legacy-settings.scss
@@ -3,4 +3,5 @@
 
 $theme-dark-legacy-settings: map-collect(
                 $theme-dark-legacy-keys,
+                $theme-dark-legacy-content-keys
 );
