--- a/src/Themes/hacker/_hacker-theme-legacy-settings.scss
+++ b/src/Themes/hacker/_hacker-theme-legacy-settings.scss
@@ -4,4 +4,5 @@
 $theme-hacker-legacy-settings: map-collect(
                 $theme-hacker-legacy-palette,
                 $theme-hacker-legacy-keys,
+                $theme-hacker-legacy-content-keys,
 );
