--- a/src/config/maps/_config-basic-theme-maps.scss
+++ b/src/config/maps/_config-basic-theme-maps.scss
@@ -5,3 +5,5 @@
 @import "themes/basic/palette/legacy/legacy-pallete";
 @import "themes/basic/keys/keys";
 @import "themes/basic/keys/legacy/legacy-keys";
+@import "themes/basic/keys/content";
+@import "themes/basic/keys/legacy/legacy-content";
