--- a/src/config/maps/_config-black-theme-maps.scss
+++ b/src/config/maps/_config-black-theme-maps.scss
@@ -2,3 +2,5 @@
 // This partial loads Theme Black's config maps
 @import "themes/black/keys/black-theme-keys";
 @import "themes/black/keys/legacy/black-theme-legacy-keys";
+@import "themes/black/keys/black-theme-content";
+@import "themes/black/keys/legacy/black-theme-legacy-content";
