--- a/src/config/maps/_config-dark-theme-maps.scss
+++ b/src/config/maps/_config-dark-theme-maps.scss
@@ -2,3 +2,5 @@
 // This partial loads Theme Hacker config maps
 @import "themes/dark/keys/dark-theme-keys";
 @import "themes/dark/keys/legacy/dark-theme-legacy-keys";
+@import "themes/dark/keys/dark-theme-content";
+@import "themes/dark/keys/legacy/dark-theme-legacy-content";
