--- a/src/Themes/basic/_basic-theme-legacy-settings.scss
+++ b/src/Themes/basic/_basic-theme-legacy-settings.scss
@@ -4,4 +4,5 @@
 $theme-basic-legacy-settings: map-collect(
                 $theme-basic-legacy-palette,
                 $theme-basic-legacy-keys,
+                $theme-basic-legacy-content-keys
 );
