--- a/src/Themes/hacker/_hacker-theme-settings.scss
+++ b/src/Themes/hacker/_hacker-theme-settings.scss
@@ -4,4 +4,5 @@
 $theme-hacker-settings: map-collect(
                 $theme-hacker-keys,
                 $theme-hacker-shadow-keys,
+                $theme-hacker-content-keys
 );
