--- a/src/config/maps/_config-hacker-theme-maps.scss
+++ b/src/config/maps/_config-hacker-theme-maps.scss
@@ -3,3 +3,5 @@
 @import "themes/hacker/palette/legacy/hacker-theme-legacy-palette";
 @import "themes/hacker/keys/hacker-theme-keys";
 @import "themes/hacker/keys/legacy/hacker-theme-legacy-keys";
+@import "themes/hacker/keys/hacker-theme-content";
+@import "themes/hacker/keys/legacy/hacker-theme-legacy-content";
