--- a/src/config/tokens/themes/hacker/palette/_hacker-theme-palette.scss
+++ b/src/config/tokens/themes/hacker/palette/_hacker-theme-palette.scss
@@ -8,12 +8,15 @@
 $color-pink-plastic: #fe78c6;
 $color-viola-vivid: #9f4077;
 $color-liliac: #bd93f9;
+$color-deep_blue: #0d2e65;
 
 // - Semantics
 $color-red-fluorescent: #ff5555;
+$color-amber_red: #5a2027;
 
 $color-green-grotesque: #50fa7b;
 $color-green-blackboard: #26503e;
+$color-darker_green: #194733;
 
 // Natural / Gray
 $color-night-sky: #282a36;
