Publish colors in themes map

--- a/src/config/maps/themes/black/keys/_black-theme-keys.scss
+++ b/src/config/maps/themes/black/keys/_black-theme-keys.scss
@@ -7,6 +7,7 @@ $theme-black-keys: (
         primary-on-secondary-color: $theme-black-primary-on-secondary-color,
         primary-hover-color: $theme-black-primary-hover-color,
         primary-selected-color: $theme-black-primary-selected-color,
+        primary-selected-hover-color: $theme-black-primary-selected-hover-color,
         primary-text-color: $theme-black-primary-text-color,
         text-color-on-primary: $theme-black-text-color-on-primary,
         text-color-on-inverted: $theme-black-text-color-on-inverted,
@@ -25,9 +26,11 @@ $theme-black-keys: (
         positive-color: $theme-black-positive-color,
         positive-color-hover: $theme-black-positive-color-hover,
         positive-color-selected: $theme-black-positive-color-selected,
+        positive-color-selected-hover: $theme-black-positive-color-selected-hover,
         negative-color: $theme-black-negative-color,
         negative-color-hover: $theme-black-negative-color-hover,
         negative-color-selected: $theme-black-negative-color-selected,
+        negative-color-selected-hover: $theme-black-negative-color-selected-hover,
         private-color: $theme-black-private-color,
         shareable-color: $theme-black-shareable-color,
         ui-border-color: $theme-black-ui-border-color,
