Add warning colors

--- a/src/config/tokens/themes/basic/keys/_keys.scss
+++ b/src/config/tokens/themes/basic/keys/_keys.scss
@@ -48,6 +48,10 @@ $negative-color-selected: $color-error-highlight;
 $negative-color-selected-hover: $color-pinky_red;
 $private-color: $color-bazooka;
 $shareable-color: $color-purple;
+$warning-color: $color-egg_yolk;
+$warning-color-hover: $color-desert;
+$warning-color-select: $color-summer_sun;
+$warning-color-select-hover: $color-yellow_sand;
 
 // UI elements
 // - Borders
