--- a/src/config/tokens/themes/basic/palette/_palette.scss
+++ b/src/config/tokens/themes/basic/palette/_palette.scss
@@ -23,6 +23,11 @@ $color-pinky_red: #ecb7bf;
 $color-purple: #a25ddc; // content color duplication
 $color-bazooka: #f65f7c;
 
+$color-egg_yolk: #ffcb00; // warning colors
+$color-desert: #eaaa15;
+$color-summer_sun: #fceba1;
+$color-yellow_sand: #f2d973;
+
 // Natural
 $color-black: #000000;
 $color-snow_white: #ffffff;
