--- a/src/config/tokens/themes/dark/keys/_dark-theme-keys.scss
+++ b/src/config/tokens/themes/dark/keys/_dark-theme-keys.scss
@@ -47,6 +47,10 @@ $theme-dark-negative-color-selected: $color-maroon_red;
 $theme-dark-negative-color-selected-hover: $color-amber_red;
 $theme-dark-private-color: $private-color;
 $theme-dark-shareable-color: $shareable-color;
+$theme-dark-warning-color: $color-egg_yolk; // warning-colors
+$theme-dark-warning-color-hover: $color-desert;
+$theme-dark-warning-color-select: $color-brass;
+$theme-dark-warning-color-select-hover: $color-aztec_gold;
 
 // UI elements
 // - Borders
