--- a/src/config/tokens/themes/dark/palette/_dark-theme-palette.scss
+++ b/src/config/tokens/themes/dark/palette/_dark-theme-palette.scss
@@ -15,6 +15,9 @@ $color-darker_green: #194733;
 $color-maroon_red: #642830;
 $color-amber_red: #5a2027;
 
+$color-brass: #bfa645; // Warning colors
+$color-aztec_gold: #b79c5c;
+
 // Natural / Gray
 $color-midnight: #181b34;
 $color-graphite: #30324e;
@@ -30,7 +33,7 @@ $color-spacegrey: #9699a5;
 $color-arctic_blue: #69a7ef;
 
 // Shadow
-$color-rift: #090B19;
+$color-rift: #090b19;
 
 // temp alias
 // - todo: fix, not part of Vibe colors, used for:
