Undo prettier changes

--- a/src/config/tokens/themes/dark/palette/_dark-theme-palette.scss
+++ b/src/config/tokens/themes/dark/palette/_dark-theme-palette.scss
@@ -33,7 +33,7 @@ $color-spacegrey: #9699a5;
 $color-arctic_blue: #69a7ef;
 
 // Shadow
-$color-rift: #090b19;
+$color-rift: #090B19;
 
 // temp alias
 // - todo: fix, not part of Vibe colors, used for:
