--- a/src/config/maps/themes/dark/keys/_dark-theme-keys.scss
+++ b/src/config/maps/themes/dark/keys/_dark-theme-keys.scss
@@ -39,8 +39,8 @@ $theme-dark-keys: (
         layout-border-color: $theme-dark-layout-border-color,
         warning-color: $theme-dark-warning-color,
         warning-color-hover: $theme-dark-warning-color-hover,
-        warning-color-select: $theme-dark-warning-color-select,
-        warning-color-select-hover: $theme-dark-warning-color-select-hover
+        warning-color-selected: $theme-dark-warning-color-selected,
+        warning-color-selected-hover: $theme-dark-warning-color-selected-hover
 );
 
 
