--- a/src/config/maps/themes/hacker/keys/_hacker-theme-keys.scss
+++ b/src/config/maps/themes/hacker/keys/_hacker-theme-keys.scss
@@ -37,8 +37,8 @@ $theme-hacker-keys: (
         layout-border-color: $theme-hacker-layout-border-color,
         warning-color: $theme-hacker-warning-color,
         warning-color-hover: $theme-hacker-warning-color-hover,
-        warning-color-select: $theme-hacker-warning-color-select,
-        warning-color-select-hover: $theme-hacker-warning-color-select-hover
+        warning-color-selected: $theme-hacker-warning-color-selected,
+        warning-color-selected-hover: $theme-hacker-warning-color-selected-hover
 );
 
 
